[package]
name = "raii-counter"
version = "0.2.0"
license = "MIT"
authors = ["Darren Tsung <darren@onesignal.com>"]
description = "RAII Counter."
homepage = "https://github.com/DarrenTsung/raii-counter"
repository = "https://github.com/DarrenTsung/raii-counter"
readme = "README.md"
keywords = ["counter", "raii"]


[dependencies]
