[package]
authors = ["Darren Tsung <darren.tsung@gmail.com>"]
description = "RAII Counter."
edition = "2018"
homepage = "https://github.com/DarrenTsung/raii-counter"
keywords = ["counter", "raii"]
license = "MIT"
name = "raii-counter"
readme = "README.md"
repository = "https://github.com/DarrenTsung/raii-counter"
version = "0.2.1"

[dependencies]
thiserror = "1.0"
